fix(style): letter-spacing and line-height for card detail

--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ body {
 .card__detail {
   font-size: 1.5rem;
   font-weight: 400;
-  letter-spacing: -0.019rem;
-  line-height: 1.8rem;
+  letter-spacing: -0.01875rem;
+  line-height: 1.9rem;
   margin-top: -1.2rem;
   color: var(--grayish-blue);
   padding-inline: 1.6rem;
